fetch on weather api

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <div class="container">
         <h1 class="heading">Simple Weather App</h1>
         <form>
-            <input type="text" placeholder="Search for a city" autofocus>
-            <button type="submit">SUBMIT</button>
+            <input type="text" placeholder="Search for a city" autofocus required>
+            <button type="button" class="submit-btn">SUBMIT</button>
             <span class="msg"></span>
         </form>
     </div>
@@ -33,4 +33,5 @@
     </div>
 </footer>
 
+<script src="../src/components/weatherapp/index.js"></script>
 </html>
