--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,17 @@
 
     <link rel="stylesheet" href="../src/styles/global.css">
     <link rel="stylesheet" href="../src/styles/header.css">
+    <link rel="stylesheet" href="../src/styles/ajax-section.css">
     <link rel="stylesheet" href="../src/styles/footer.css">
+    <link rel="stylesheet" href="../src/styles/media-screen.css">
 </head>
 
 <section class="top-banner">
     <div class="container">
         <h1 class="heading">Simple Weather App</h1>
         <form>
-            <input type="text" placeholder="Search for a city" autofocus required>
-            <button type="button" class="submit-btn">SUBMIT</button>
+            <input type="text" placeholder="Search for a city" autofocus>
+            <button type="submit" class="submit-btn">SUBMIT</button>
             <span class="msg"></span>
         </form>
     </div>
@@ -33,5 +35,5 @@
     </div>
 </footer>
 
-<script src="../src/components/weatherapp/index.js"></script>
+<script src="../src/scripts/index.js"></script>
 </html>
